--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 数据仿真生成/output/
+数据仿真生成/synthetic_yolo/
 Ultralytics_sam_auto_object_label/*.pt
 Ultralytics_sam_auto_object_label/sam_anota/*.pt
 Ultralytics_sam_auto_object_label/sam_anota/video_annotations/
+Ultralytics_sam_auto_object_label/video_annotations/
